# hdata-analysis

./: Cargo.toml  README.md  config.toml  mise.toml  rustfmt.toml
src/: app.rs  main.rs
src/auth/handler/: auth_handler.rs
src/auth/model/: auth.rs
src/auth/route/: auth_route.rs
src/biz/: mod.rs
src/biz/datasource/handler/: data_source_handler.rs  mod.rs
src/biz/datasource/model/: data_source.rs
src/biz/datasource/repository/: data_source_repo.rs  mod.rs
src/biz/datasource/route/: data_source_route.rs  mod.rs
src/biz/datasource/service/: data_source_service.rs  mod.rs
src/biz/pet/handler/: pet_handler.rs  pet_type_handler.rs
src/biz/pet/model/: mod.rs  pet.rs  pet_type.rs
src/biz/pet/repository/: mod.rs  pet_repo.rs  pet_type_repo.rs
src/biz/pet/route/: pet_route.rs  pet_type_route.rs
src/biz/pet/service/: pet_service.rs  pet_type_service.rs
src/biz/transtask/handler/: mod.rs  trans_task_handler.rs
src/biz/transtask/model/: mod.rs  trans_task.rs
src/biz/transtask/repository/: mod.rs  trans_task_repo.rs
src/biz/transtask/route/: mod.rs  trans_task_route.rs
src/biz/transtask/service/: mod.rs  trans_task_service.rs
src/common/: mod.rs
src/common/macros/: mod.rs
src/common/model/: auditable.rs  entity.rs
src/common/vo/: response.rs
src/config/: config.rs
src/error/: error.rs
src/middleware/: auth.rs  extractors.rs
src/pet/handler/: mod.rs  pet_handler.rs  pet_type_handler.rs
src/pet/model/: pet.rs
src/pet/repository/: pet_repo.rs  pet_type_repo.rs
src/pet/route/: mod.rs  pet_route.rs  pet_type_route.rs
src/pet/service/: mod.rs  pet_service.rs  pet_type_service.rs
src/sys/user/handler/: user_handler.rs
src/user/handler/: user_handler.rs
src/user/model/: user.rs
src/user/repository/: user_repo.rs
src/user/route/: user_route.rs
src/user/service/: user_service.rs
src/util/: crypto_util.rs  jwt_util.rs  mod.rs
(+3 files in other folders)
